add: instalação do google analytics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Falavinha</title>
+    <title>Falavinha Totem App</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JD4SHS57F4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-JD4SHS57F4");
+    </script>
   </head>
   <body>
     <script type="module" src="/src/main.jsx"></script>
