--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-JD4SHS57F4"
+      src="https://www.googletagmanager.com/gtag/js?id=G-HS7HRS8B6W"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -24,7 +24,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-JD4SHS57F4");
+      gtag("config", "G-HS7HRS8B6W");
     </script>
   </head>
   <body>
